# stormcos_builder

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
config/: stormcos-builder.example.toml
crates/stormcos-builder/: Cargo.toml
crates/stormcos-builder/src/: api.rs  buildvm_build.rs  config.rs  devct_build.rs  github.rs  jobs.rs  main.rs  model.rs  pipeline.rs  reconcile.rs  web.rs
deploy/terragrunt/: free-vmid.sh  root.hcl
deploy/terragrunt/builder/: .terraform.lock.hcl  terragrunt.hcl
deploy/terragrunt/builder/.terragrunt-cache/-s7E5tWPcfLGc0fRUh26r1K5gAs/zzrErXivfCDGqan1FvjtMWHfd0A/: .gitignore  .terragrunt-source-version  CHANGELOG.md  CLAUDE.md  README.md
deploy/terragrunt/builder/.terragrunt-cache/-s7E5tWPcfLGc0fRUh26r1K5gAs/zzrErXivfCDGqan1FvjtMWHfd0A/docs/: USAGE.md
deploy/terragrunt/builder/.terragrunt-cache/-s7E5tWPcfLGc0fRUh26r1K5gAs/zzrErXivfCDGqan1FvjtMWHfd0A/examples/terragrunt/: README.md  root.hcl
deploy/terragrunt/builder/.terragrunt-cache/-s7E5tWPcfLGc0fRUh26r1K5gAs/zzrErXivfCDGqan1FvjtMWHfd0A/examples/terragrunt/g8/bits/: terragrunt.hcl
deploy/terragrunt/builder/.terragrunt-cache/-s7E5tWPcfLGc0fRUh26r1K5gAs/zzrErXivfCDGqan1FvjtMWHfd0A/modules/proxmox-fedora-vm/: .terragrunt-module-manifest  README.md  main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
deploy/terragrunt/builder/.terragrunt-cache/-s7E5tWPcfLGc0fRUh26r1K5gAs/zzrErXivfCDGqan1FvjtMWHfd0A/modules/proxmox-fedora-vm/templates/: user-data.yaml.tftpl
scripts/: build-entry.sh  build-image.sh  delete-cluster.sh  provision-cluster.sh  provision-stormcos-vm.sh  rebuild-machine.sh  setup-host.sh
