[workspace]
resolver = "2"
members = ["crates/stormcos-builder"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/glennswest/stormcos_builder"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "tokio"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
devct-driver = { git = "ssh://git@github.com/glennswest/devct-driver.git" }
uuid = { version = "1", features = ["v4"] }

stormcos-install = { git = "https://github.com/glennswest/stormcos-installer", rev = "6371994" }

[profile.release]
lto = true
strip = true
